[package]
name = "morpho_rust_snippets"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.7.0", features = ["full"] }
eyre = "0.6.12"
futures-util = "0.3.31"
reqwest = "0.12.9"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
